feat(all): 初始化文件
初始化文件

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=5">
-    <title>小黎-慢慢亦漫漫，漫漫又灿灿</title>
-    <meta name="description" content="小黎博客，慢慢亦漫漫，漫漫又灿灿！">
-    <meta name="keywords" content="Html,Css,Js,Vue,Node,个人博客">
+    <title>黎·慢慢亦漫漫，漫漫又灿灿</title>
+    <meta name="description" content="黎、采黎、小黎，欢迎来到小黎的个人网站">
+    <meta name="keywords" content="html,css,js,vue,Node,黎·个人博客">
     <meta name="format-detection" content="telephone=no">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="./favicon.ico">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
-
+    个人网站
+    <div style="height: 140vh;">sss</div>
 </body>
 
 </html>
