feat(all): 新增部分字体、图片文件
新增部分字体、图片文件

--- a/index.html
+++ b/index.html
@@ -10,12 +10,49 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="./favicon.ico">
     <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/scrollbar.css">
     <link rel="stylesheet" href="./css/index.css">
+    <script async src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 </head>
 
 <body>
-    个人网站
-    <div style="height: 140vh;">sss</div>
+    <!--背景區域-->
+    <div class="bg"></div>
+    <!--头部区域-->
+    <header>头部区域</header>
+    <!--首屏导航区域-->
+    <nav>
+        <div class="nav-left">
+            <div class="nav-left-date">
+                <p id="date">2022年12月30日</p>
+                <span id="time">16:40:39</span>
+            </div>
+            <div class="nav-left-say">
+                努力吧！就算再寂寞！也要努力活下去！
+            </div>
+        </div>
+        <div class="nav-right">
+            <div></div>
+            <p id="busuanzi_container_site_pv"></p>
+            <p id="busuanzi_value_site_pv"></p>
+            <img src="https://ghchart.rshah.org/214d7a/xiaoli1999" alt="xiaoli1999 Github chart" />
+        </div>
+    </nav>
+    <section>
+        <aside>左侧导航区域</aside>
+        <main>主体内容区域</main>
+    </section>
+    <footer>
+        底部区域
+    </footer>
+    <div style="height: 150vh;">返回顶部</div>
+    <div class="loading">加载中...</div>
+    <div class="loading">加载中...</div>
 </body>
+<script src="js/tools/fireworks.js"></script>
+<script src="./js/setDate.js"></script>
 
+<!--看板娘-->
+<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">-->
+<!--<script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>-->
 </html>
