--- a/index.html
+++ b/index.html
@@ -16,33 +16,34 @@
 </head>
 
 <body>
-    <!--背景區域-->
-    <div class="bg"></div>
-    <!--头部区域-->
-    <header>头部区域</header>
     <!--首屏导航区域-->
     <nav>
-        <div class="nav-left">
-            <div class="nav-left-date">
-                <p id="date">2022年12月30日</p>
-                <span id="time">16:40:39</span>
+        <div class="nav-wrap">
+            <div class="nav-left">
+                <div class="nav-left-date">
+                    <p id="date">2022年12月30日</p>
+                    <span id="time">16:40:39</span>
+                </div>
+                <div class="nav-left-say">
+                    努力吧！就算再寂寞！也要努力活下去！
+                </div>
             </div>
-            <div class="nav-left-say">
-                努力吧！就算再寂寞！也要努力活下去！
+            <div class="nav-right">
+                <div></div>
+                <p id="busuanzi_container_site_pv"></p>
+                <p id="busuanzi_value_site_pv"></p>
+                <img src="https://ghchart.rshah.org/214d7a/xiaoli1999" alt="xiaoli1999 Github chart" />
             </div>
-        </div>
-        <div class="nav-right">
-            <div></div>
-            <p id="busuanzi_container_site_pv"></p>
-            <p id="busuanzi_value_site_pv"></p>
-            <img src="https://ghchart.rshah.org/214d7a/xiaoli1999" alt="xiaoli1999 Github chart" />
         </div>
     </nav>
+    <!--头部区域-->
+    <header>头部区域</header>
     <section>
         <aside>左侧导航区域</aside>
         <main>主体内容区域</main>
     </section>
     <footer>
+        <a href="https://example.com" download="https://example.com">下载</a>
         底部区域
     </footer>
     <div style="height: 150vh;">返回顶部</div>
@@ -55,4 +56,12 @@
 <!--看板娘-->
 <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">-->
 <!--<script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>-->
+
+<!-- require APlayer -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
+<script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
+<!-- require MetingJS -->
+<script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>
+
+<meting-js server="netease" type="playlist" id="7145076939" mini="false" fixed="false"></meting-js>
 </html>
