feat(index.html): 暂存页面
暂存页面

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="nav-wrap">
             <div class="nav-left">
                 <div class="nav-left-date">
-                    <p id="date">2022年12月30日</p>
-                    <span id="time">16:40:39</span>
+                    <p id="date"></p>
+                    <span id="time"></span>
                 </div>
                 <div class="nav-left-say">
                     努力吧！就算再寂寞！也要努力活下去！
@@ -37,16 +37,32 @@
         </div>
     </nav>
     <!--头部区域-->
-    <header>头部区域</header>
-    <section>
-        <aside>左侧导航区域</aside>
-        <main>主体内容区域</main>
-    </section>
+    <header>
+        <div class="header-name">
+            <img src="./img/avator.jpg" alt="黎">
+            小黎充电站
+        </div>
+        <div class="header-menu">
+            <p>关于我</p>
+            <p>音乐</p>
+            <p>技能</p>
+            <p>友链</p>
+            <p>留言</p>
+        </div>
+    </header>
+    <main>
+        <aside>
+            <div class="aside-personal">
+
+            </div>
+        </aside>
+        <section>主体内容区域</section>
+    </main>
     <footer>
         <a href="https://example.com" download="https://example.com">下载</a>
         底部区域
     </footer>
-    <div style="height: 150vh;">返回顶部</div>
+    <div style="height: 200vh;">返回顶部</div>
     <div class="loading">加载中...</div>
     <div class="loading">加载中...</div>
 </body>
@@ -58,10 +74,10 @@
 <!--<script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>-->
 
 <!-- require APlayer -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
-<script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
-<!-- require MetingJS -->
-<script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>
+<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">-->
+<!--<script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>-->
+<!--&lt;!&ndash; require MetingJS &ndash;&gt;-->
+<!--<script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>-->
 
-<meting-js server="netease" type="playlist" id="7145076939" mini="false" fixed="false"></meting-js>
+<!--<meting-js server="netease" type="playlist" id="7145076939" mini="false" fixed="false"></meting-js>-->
 </html>
