feat(index.html): 暂存
暂存

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+    <!--背景-->
+    <div class="bg"></div>
     <!--首屏导航区域-->
     <nav>
         <div class="nav-wrap">
@@ -53,18 +55,38 @@
     <main>
         <aside>
             <div class="aside-personal">
-
+                <img src="./img/avator.jpg" alt="黎">
+                <p class="aside-personal-name">黎</p>
+                <p class="aside-personal-job">前端开发工程师</p>
+                <p class="aside-personal-introduce">慢慢又漫漫·漫漫亦灿灿</p>
+                <div class="aside-personal-nav">
+                    <p>
+                        <img src="./img/platform/csdn.png" alt="csdn">
+                    </p>
+                    <p>
+                        <img src="./img/platform/csdn.png" alt="csdn">
+                    </p>
+                    <p>
+                        <img src="./img/platform/csdn.png" alt="csdn">
+                    </p>
+                    <p>
+                        <img src="./img/platform/csdn.png" alt="csdn">
+                    </p>
+                </div>
             </div>
         </aside>
-        <section>主体内容区域</section>
+        <section>
+            <div class="main-my">关于我</div>
+            <div class="main-my">关于我</div>
+            <div class="main-my">关于我</div>
+            <div class="main-my">关于我</div>
+        </section>
     </main>
     <footer>
-        <a href="https://example.com" download="https://example.com">下载</a>
         底部区域
     </footer>
     <div style="height: 200vh;">返回顶部</div>
-    <div class="loading">加载中...</div>
-    <div class="loading">加载中...</div>
+<!--    <div class="loading">加载中...</div>-->
 </body>
 <script src="js/tools/fireworks.js"></script>
 <script src="./js/setDate.js"></script>
